sfc-e2e-collector.yaml
apiVersion: v1
kind: Service
metadata:
  name: sfc-e2e-collector
  namespace: testbed
  labels:
    app: sfc-e2e-collector
spec:
  selector:
    app: sfc-e2e-collector
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sfc-e2e-collector
  namespace: testbed
  labels:
    app: sfc-e2e-collector
spec:
  selector:
    matchLabels:
      app: sfc-e2e-collector
  replicas: 1
  template:
    metadata:
      labels:
        app: sfc-e2e-collector
    spec:
      containers:
      - name: sfc-e2e-collector
        image: euidong/sfc-e2e-collector:0.0.1
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "1"
            memory: "1Gi"
