ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: testbed
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: <Please Replace>
    http:
      paths:
      - path: /firewall
        pathType: Prefix
        backend:
          service:
            name: firewall-vnf
            port:
              number: 80
      - path: /ids
        pathType: Prefix
        backend:
          service:
            name: ids-vnf
            port:
              number: 80
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
      - path: / # TODO: Hubble baseurl doesn't work as I expected. I'll have to change the / to /hubble later.
        pathType: Prefix
        backend:
          service:
            name: hubble
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: testbed
spec:
  type: ExternalName
  externalName: prometheus.monitoring.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: testbed
spec:
  type: ExternalName
  externalName: grafana.monitoring.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: hubble
  namespace: testbed
spec:
  type: ExternalName
  externalName: hubble-ui.kube-system.svc.cluster.local
